@startuml
Class Register{
----
get_Name()
get_User()
get_Password()
getCel()
getId()
Registrar()
}

Class User{
nombre: str
id: int
tel: str
carrito: str
total: float
ubicacion: str
--
pedido(self)
pago(self)
pedido_bd(self)
Proceso(User)
}

Class dunord{
cafe: Cafe
terrase: Terrase
domicilios: Domicilios
--
modificarMenu()
Eliminarsql()
AñadirSql()
modificarDomiciliarios()
Escoger_Domiciliario()
}

Class cafe{
menuC: dict
}

Class terrase{
menuT: dict
}

Class Domiciliario{
name: str
id: int
cel: int
state: str
--
disponibilidad(self, Domis: Domiciliario)
relizar_domicilio(self, nombre:str, Domis: Domiciliario)
}

class Domicilios{
----
get_infoD(ID: int)
get_pedido()
estado_pedido(opc: int, nombre: str)
process()
}

class Login{
----
compareUser()
compareAdmin()
compareDomiciliario()
getInfo(Usuario: str)
execute()
}
cafe "*" --* "*" dunord
terrase "*" --* "*" dunord
Domiciliario "*" --* "1" Domicilios
Domicilios "*" --* "*" dunord
dunord "*" --* "1" User
@enduml